--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,1 @@
-<h1>Welcome to "Mini RPG game editor"</h1>
-<% if user_signed_in? %>
-	<p><%= link_to "Edit", edit_user_registration_path %></p>
-	<p><%= link_to "Logout", destroy_user_session_path, :method => :delete, data: { confirm: "Are you sure?"} %></p>
-<% else %>
-	<p><%= link_to "Sign up", new_user_registration_path %></p>
-	<p><%= link_to "Sign in", new_user_session_path %></p>
-<% end %>
+<h1 class="text-center">Welcome to "Mini RPG game editor"</h1>
