--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
   <div class="navbar">
+    <a class="navbar-brand" href="<%= root_path %>"><span style="font-weight: bolder;"><span style="color: #e5ae38;">RPG</span> GAME EDITOR</span></a>
     <ul class="nav navbar-nav navbar-right">
       <li><%= link_to "Home", root_path %></li>
     <% if user_signed_in? %>
