Added carrirerwave gem to upload photo

--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -3,8 +3,8 @@
     <h2>Your characters</h2>
       <ul>
         <% @characters.each do |character| %>
-          <li><%= image_tag character.avatar %></li>
-          <li><%= link_to character.name, character_path(character) %></li>
+          <li><%= image_tag character.avatar.thumb %>
+          <%= link_to character.name, character_path(character) %></li>
         <% end %>
       </ul>
   </div>
