--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,8 +4,13 @@
     <ul class="nav navbar-nav navbar-right">
       <li><%= link_to "Home", root_path %></li>
     <% if user_signed_in? %>
-      <li><%= link_to "Edit account", edit_user_registration_path %></li>
-      <li><%= link_to "Logout", signout_path, :method => :delete, data: { confirm: "Are you sure?"} %></li>
+      <li class="dropdown">
+         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My account</a>
+        <ul class="dropdown-menu">
+          <li><%= link_to "Edit account", edit_user_registration_path %></li>
+          <li><%= link_to "Logout", signout_path, :method => :delete, data: { confirm: "Are you sure?"} %></li>
+        </ul>
+      </li>  
     <% else %>
       <li><%= link_to "Sign up", signup_path %></li>
       <li><%= link_to "Sign in", signin_path %></li>
