--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -1,10 +1,10 @@
 <div class="col-md-12">
   <div class="col-md-4 col-md-offset-4">
     <h2>Your characters</h2>
-      <ul>
+      <ul class="list-unstyled">
         <% @characters.each do |character| %>
           <li><%= image_tag character.avatar.thumb %>
-          <%= link_to character.name, character_path(character) %></li>
+          <%= link_to character.name, character_path(character.id) %></li>
         <% end %>
       </ul>
   </div>
