Styling character attributes

--- a/app/views/character_attributes/_character_attribute.html.erb
+++ b/app/views/character_attributes/_character_attribute.html.erb
@@ -1,9 +1,10 @@
 <div class="attribute_<%= character_attribute.id %>">
   <table>
     <tr>
-      <td><%= image_tag character_attribute.icon %></td>
-      <td><%= character_attribute.name %></td>
-      <td><input type="range" min="1" max="100" value="<%= character_attribute.intensity %>" disabled="true"></td>
+      <td class="attribute_icon"><%= image_tag character_attribute.icon %></td>
+      <td class="attribute_name"><%= character_attribute.name %></td>
+      <td class="intensity"><input type="range" min="1" max="100" value="<%= character_attribute.intensity %>" disabled="true"></td>
+      <td class="intensity_value"><%= character_attribute.intensity %>%</td>
       <td><%= link_to character_attribute_path(character_attribute), method: :delete, remote: true, data: { confirm: "Are you sure?" } do %>
         <span class="glyphicon glyphicon-trash"></span>
         <% end %> 
