--- a/app/views/character_attributes/_new_attribute.html.erb
+++ b/app/views/character_attributes/_new_attribute.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [@character.character_attribute.new], html: { multipart: true }, remote: true do |f| %>
+<%= form_for @character.character_attribute.new, html: { multipart: true }, remote: true do |f| %>
   
   <div class="field">
     <%= f.label :name %><br />
@@ -17,7 +17,7 @@
     <%= f.hidden_field :character_id, value: @character.id, autocomplete: "off"%>
   
   <div class="actions">
-    <%= f.submit "Add attribute", class: "btn btn-warning" %>
+    <br><%= f.submit "Add attribute", class: "btn btn-warning" %>
   </div>
 
 <% end %>
