--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -1,14 +1,22 @@
 <div class="col-md-12">
+  
   <div class="col-md-4">
     <h2><%= @character.name %></h2>
     <p><%= image_tag @character.avatar %></p>
-    <p><%= link_to "Edit character", edit_character_path(@character.id) %></p>
-    <p><%= link_to "Destroy character", character_path(@character.id), method: :delete, data: { confirm: "Are you sure? "} %></p>
+    <p><span class="glyphicon glyphicon-wrench"></span>&nbsp;<%= link_to "Edit character", edit_character_path(@character.id) %>&nbsp;|&nbsp;<span class="glyphicon glyphicon-trash"></span>&nbsp;<%= link_to "Destroy character", character_path(@character.id), method: :delete, data: { confirm: "Are you sure? "} %></p>
   </div>
-  <div class="col-md-4">
-  	<div class="show_attribute">
+
+  <div class="col-md-6">
+    <div id="show_attribute">
+      <h3>Attributes</h3>
       <%= render @character_attribute %>
     </div>
-    <%= render 'character_attributes/new_attribute' %>
+  </div>
+
+  <div class="col-md-12">
+    <div class="col-md-4">
+      <h3>Add new attribute</h3>
+      <%= render 'character_attributes/new_attribute' %>
+    </div>  
   </div>
 </div>
