--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -16,7 +16,9 @@
   <div class="col-md-12">
     <div class="col-md-4">
       <h3>Add new attribute</h3>
-      <%= render 'character_attributes/new_attribute' %>
+      <div id="new_attribute_form">
+        <%= render 'character_attributes/new_attribute' %>
+      </div>
     </div>  
   </div>
 </div>
